<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <EditText
        android:id="@+id/editT"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:hint="@string/weight_in_kg"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editT2"
        app:layout_constraintEnd_toEndOf="@+id/editT2"
        app:layout_constraintStart_toStartOf="@+id/editT2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/editT2"
        android:layout_width="257dp"
        android:layout_height="0dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="31dp"
        android:autofillHints=""
        android:hint="@string/height_in_cm"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editT"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="143dp"
        android:text="@string/submit"
        android:textSize="15pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editT2"
        app:layout_constraintStart_toStartOf="@+id/editT2"
        app:layout_constraintTop_toBottomOf="@+id/editT2"
        tools:ignore="MissingConstraints" />

    <TextView

        android:id="@+id/textView"
        android:layout_width="297dp"
        android:layout_height="0dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="34dp"
        android:text="@string/enter_the_below_details"
        android:textAlignment="center"
        android:textSize="12pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
