<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/txt4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="19dp"
        android:text="@string/your_bmi_value_is"
        android:textSize="20pt"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="125dp"
        android:layout_height="175dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="66dp"
        android:text="@string/value"
        android:textSize="20pt"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/txt4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/view"
        android:layout_width="308dp"
        android:layout_height="166dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="194dp"
        android:text="@string/condition"
        android:textSize="25pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt4"
        app:srcCompat="@drawable/value"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>






